--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -55,9 +55,14 @@
     height: 100%;
     border-bottom: 3px solid transparent;
   }
-  /* .fa-code {
-    margin-left: 1rem;
-  } */
+  #Logout-btn{
+    margin: 0;
+    padding: 0;
+    height: 2.5rem;
+    width: 5rem;
+    border-radius: 50px;
+    text-decoration: dotted;
+  }
   
   .nav-item {
     line-height: 40px;
@@ -141,3 +146,5 @@
       color: #ffdd40;
     }
   }
+
+  
