--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -58,10 +58,11 @@
   #Logout-btn{
     margin: 0;
     padding: 0;
-    height: 2.5rem;
-    width: 5rem;
-    border-radius: 50px;
-    text-decoration: dotted;
+    height: 2.2rem;
+    width: 4rem;
+    border: none;
+    font-size: 0.9rem;
+    
   }
   
   .nav-item {
@@ -84,8 +85,9 @@
   }
   
   .nav-item .active {
-    color: #ffdd40;
-    border: 1px solid #ffdd40;
+    color: #ede3b6;
+    border: 1px solid #e00606;
+    border-radius: 2px;
   }
   
   .nav-icon {
