--- a/src/components/Pages/Login.css
+++ b/src/components/Pages/Login.css
@@ -1,5 +1,11 @@
 .login {
-    background-color: #080710;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: -1; 
 }
 
 .background {
